# PyShieldBuilder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  lint.yml  mypy.yml  publish.yml  pytest.yml  release.yml  ruff.yml  test.yml
benchmarks/: benchmark_build.py
docs/: api.md  architecture.md  developer.md  index.md  migration.md
examples/: basic_build_and_run.py
examples/hello_app/: app.py
src/pyshieldbuilder/: __init__.py  builder.py  cli.py  config.py  crypto.py  exceptions.py  integrity.py  logger.py  models.py  package.py  protection.py  runtime.py  stage1.py  transform.py
src/pyshieldbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pyshieldbuilder/crypto/: key_store.py  signing.py  symmetric.py
src/pyshieldbuilder/integrity/: __init__.py
src/pyshieldbuilder/plugins/: base.py
src/pyshieldbuilder/utils/: audit.py  encoding.py
tests/: test_builder_runtime.py  test_cli.py  test_config_cli.py  test_crypto.py  test_integrity.py  test_integrity_and_keystore.py  test_loader.py  test_obfuscation.py  test_protection.py  test_signing.py  test_stage1.py  test_transform_package_runtime.py
