[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshieldbuilder"
version = "0.2.0"
description = "Secure Python source protection and runtime loader"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "PyShieldBuilder"}]
dependencies = [
  "cryptography>=43.0.0",
]

[project.scripts]
pyshieldbuilder = "pyshieldbuilder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
