[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshieldbuilder"
version = "0.1.0"
description = "Secure Python source packaging with AES-256 encryption and integrity checks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "PyShieldBuilder contributors" }
]
keywords = ["security", "encryption", "python", "packaging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography==48.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[project.scripts]
pyshieldbuilder = "pyshieldbuilder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
